# poker-night-ledger

./: CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/skills/execute-stage/: SKILL.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routers/: games.py  ledger.py  notifications.py  settlement.py  users.py  ws.py
backend/app/core/: config.py
backend/app/models/: __init__.py  game.py  ledger.py  notification.py  participant.py
backend/app/realtime/: events.py
backend/app/schemas/: game.py  ledger.py  participant.py  settlement.py  stats.py  user.py
backend/app/services/: game_service.py  ledger_service.py  notification_service.py  participant_service.py  settlement_service.py  stats_service.py  user_service.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_games.py  test_history.py  test_ledger.py  test_notifications.py  test_settlement.py  test_social.py  test_websocket.py
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(app)/: _layout.tsx  profile.tsx
mobile/app/auth/: _layout.tsx  login.tsx  register.tsx
mobile/src/components/: InvitePlayerModal.tsx  LoadingScreen.tsx  UserSearchInput.tsx
mobile/src/hooks/: useGameSocket.ts  useNotifications.ts
mobile/src/lib/: apiClient.ts  queryKeys.ts
mobile/src/services/: authService.ts  gameService.ts  ledgerService.ts  notificationsService.ts  userService.ts
mobile/src/store/: authStore.ts
mobile/src/types/: game.ts  notification.ts  user.ts
(+25 files in other folders)
